force-app/main/default/objects/Purchase_Order_Line__c/fields/Apply_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Apply_Cultivation_Tax__c</fullName>
    <formula>TEXT(Product_Name__r.Apply_Cultivation_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Cultivation Tax</label>
    <type>Text</type>
</CustomField>