force-app/main/default/objects/Purchase_Order_Line__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>