force-app/main/default/objects/Purchase_Order_Line__c/fields/Balance_Qty__c.field-meta.xml
<CustomField>
    <fullName>Balance_Qty__c</fullName>
    <formula>IF((TEXT(POLI_Status__c) &lt;&gt; &apos;Rejected&apos; &amp;&amp; TEXT(POLI_Status__c) &lt;&gt; &apos;Cancelled&apos; ) &amp;&amp; NOT(Product_Name__r.Auto_Receive__c),
Qty_Ordered__c - Total_Received_Qty__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>