force-app/main/default/objects/Purchase_Order_Line__c/fields/Balance_Qty_Value__c.field-meta.xml
<CustomField>
    <fullName>Balance_Qty_Value__c</fullName>
    <formula>Unit_Cost__c *  Balance_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Qty Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>