force-app/main/default/objects/Purchase_Order_Line__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <inlineHelpText>Harvest Batch ID, Batch ID, Lot Code, Manufacturing Lot</inlineHelpText>
    <label>Del_Batch ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>