force-app/main/default/objects/Purchase_Order_Line__c/fields/Best_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Best_by_Date__c</fullName>
    <label>Best by Date</label>
    <type>Date</type>
</CustomField>