force-app/main/default/objects/Purchase_Order_Line__c/fields/Billable_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Billable_Cultivation_Tax__c</fullName>
    <label>Billable Cultivation Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>