force-app/main/default/objects/Purchase_Order_Line__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <formula>Brand_Quote_Line__r.Brand_Quote_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Quote</label>
    <type>Text</type>
</CustomField>