force-app/main/default/objects/Purchase_Order_Line__c/fields/Brand_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote Line</label>
    <referenceTo>Brand_Quote_Line__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>