force-app/main/default/objects/Purchase_Order_Line__c/fields/Cannabis_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Category_2__c</fullName>
    <label>Cannabis Category 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cannabis_Category</valueSetName>
    </valueSet>
</CustomField>