force-app/main/default/objects/Purchase_Order_Line__c/fields/Cannabis_Ratio_1__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Ratio_1__c</fullName>
    <label>Cannabis Ratio 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>