force-app/main/default/objects/Purchase_Order_Line__c/fields/Flag_for_closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_closed_Status__c</fullName>
    <description>Flag used in PO workflow</description>
    <formula>IF( (ISPICKVAL(POLI_Status__c, &apos;Closed&apos;) || ISPICKVAL(POLI_Status__c, &apos;Cancelled&apos;)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag for closed Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>