force-app/main/default/objects/Purchase_Order_Line__c/fields/Line_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cost__c</fullName>
    <formula>IF(OR(ISPICKVAL(POLI_Status__c, &quot;Cancelled&quot;),ISPICKVAL(POLI_Status__c, &quot;Rejected&quot;)),0,Qty_Ordered__c  *  Unit_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>