force-app/main/default/objects/Purchase_Order_Line__c/fields/Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>