force-app/main/default/objects/Purchase_Order_Line__c/fields/Producer_Name2__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name2__c</fullName>
    <formula>Product_Name__r.Producer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Name</label>
    <type>Text</type>
</CustomField>