force-app/main/default/objects/Purchase_Order_Line__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <formula>Product_Name__r.Brand_Name__c</formula>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>