force-app/main/default/objects/Purchase_Order_Line__c/fields/Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>POLI Promised Date</inlineHelpText>
    <label>Promised Date</label>
    <type>Date</type>
</CustomField>