force-app/main/default/objects/Purchase_Order_Line__c/fields/Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ordered__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Qty Ordered</inlineHelpText>
    <label>Qty Ordered</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>