force-app/main/default/objects/Purchase_Order_Line__c/fields/Receiving__c.field-meta.xml
<CustomField>
    <fullName>Receiving__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving</label>
    <referenceTo>Receiving__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>