force-app/main/default/objects/Purchase_Order_Line__c/fields/Subtotal_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Cannabis_Weight__c</fullName>
    <formula>Qty_Ordered__c * WAVG_Cannabis_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>