force-app/main/default/objects/Purchase_Order_Line__c/fields/Subtotal_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Cultivation_Tax__c</fullName>
    <formula>Qty_Ordered__c * WAVG_Unit_Cultivation_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>