force-app/main/default/objects/Purchase_Order_Line__c/fields/Subtotal_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Wholesale_Price__c</fullName>
    <formula>(Wholesale_Price__c *  Qty_Ordered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>