force-app/main/default/objects/Purchase_Order_Line__c/fields/Total_Received_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Qty__c</fullName>
    <label>Total Received Qty</label>
    <summarizedField>Receiving_Line__c.Total_Received_Qty__c</summarizedField>
    <summaryForeignKey>Receiving_Line__c.Purchase_Order_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>