force-app/main/default/objects/Purchase_Order_Line__c/fields/Total_Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Value__c</fullName>
    <formula>Total_Received_Qty__c *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Received Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>