force-app/main/default/objects/Purchase_Order_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <inlineHelpText>Unique Identifier, Batch Code, Lot Code</inlineHelpText>
    <label>Del_UID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>