force-app/main/default/objects/Purchase_Order_Line__c/fields/Unit_Cannabis_Weight_1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cannabis_Weight_1__c</fullName>
    <label>Unit Cannabis Weight 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>