force-app/main/default/objects/Purchase_Order_Line__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <inlineHelpText>Unit Cost</inlineHelpText>
    <label>Unit Cost</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>