force-app/main/default/objects/Purchase_Order_Line__c/fields/Unit_Cultivation_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax_1__c</fullName>
    <label>Unit Cultivation Tax 1</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>