force-app/main/default/objects/Purchase_Order_Line__c/fields/Unit_Cultivation_Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cultivation_Tax_2__c</fullName>
    <label>Unit Cultivation Tax 2</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>