force-app/main/default/objects/Purchase_Order_Line__c/fields/WAVG_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>WAVG_Cannabis_Weight__c</fullName>
    <formula>Unit_Cannabis_Weight_1__c * Cannabis_Ratio_1__c + Unit_Cannabis_Weight_2__c * Cannabis_Ratio_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WAVG Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>