force-app/main/default/objects/Purchase_Order_Line__c/fields/WAVG_Unit_Cultivation_Tax__c.field-meta.xml
<CustomField>
    <fullName>WAVG_Unit_Cultivation_Tax__c</fullName>
    <formula>Unit_Cultivation_Tax_1__c + Unit_Cultivation_Tax_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WAVG Unit Cultivation Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>