force-app/main/default/objects/Purchase_Order_Line__c/fields/Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Price__c</fullName>
    <formula>Brand_Quote_Line__r.Retail_Wholesale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>