force-app/main/default/objects/Purchase_Order_Line__c/recordTypes/Factoring.recordType-meta.xml
<RecordType>
    <fullName>Factoring</fullName>
    <active>true</active>
    <label>Factoring</label>
</RecordType>