force-app/main/default/objects/Purchase_Order_Line__c/recordTypes/Invoice_Only.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Only</fullName>
    <active>true</active>
    <description>Service and Internal</description>
    <label>Invoice Only</label>
</RecordType>