force-app/main/default/objects/Purchase_Order_Line__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Product Purchases</description>
    <label>Product</label>
</RecordType>